[tool.poetry]
name = "etl-framework"
version = "0.1.0"
description = ""
authors = ["Nikola Kolev <kolev518@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
great-expectations = "^1.3.8"
pyspark = "^3.5.5"
delta-spark = "^3.3.0"
dbt-databricks = "^1.9.7"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
